fixed run-on key in git actions

--- a/.github/workflows/gromacs_build.yml
+++ b/.github/workflows/gromacs_build.yml
@@ -2,7 +2,7 @@ name: gromacs-build-mo833
 on: [push]
 jobs:
   build-gromacs:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       #checks out
       - uses: actions/checkout@v3
