--- a/.github/workflows/gromacs_build.yml
+++ b/.github/workflows/gromacs_build.yml
@@ -12,4 +12,4 @@ jobs:
       - run: sudo apt-get -y install build-essential libssl-dev cmake
       #build
       - run: pwd && ls
-      - run: mkdir build && cd build && cmake .. -DGMX_BUILD_OWN_FFTW=ON -DREGRESSIONTEST_DOWNLOAD=ON && make && make check ; make install && source /usr/local/gromacs/bin/GMXRC
+      - run: mkdir build && cd build && cmake .. -DGMX_BUILD_OWN_FFTW=ON -DREGRESSIONTEST_DOWNLOAD=ON && make && make check ; source /usr/local/gromacs/bin/GMXRC
