--- a/.github/workflows/build_gromcas.yml
+++ b/.github/workflows/build_gromcas.yml
@@ -1,5 +1,7 @@
 name: gromacs-build-mo833
-on: [push]
+on:
+  push:
+  	branches: [git_actions]
 jobs:
   build-gromacs:
     runs-on: ubuntu-latest
