removed unecessary caluses in git actions yml

--- a/.github/workflows/build_gromcas.yml
+++ b/.github/workflows/build_gromcas.yml
@@ -17,4 +17,4 @@ jobs:
     #make
     - name: make
       working-directory: build/
-      run: make && make check ; source /usr/local/gromacs/bin/GMXRC                    
+      run: make
